--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -41,6 +41,7 @@
         (keydown.enter)="pressEnter()"
       />
       <button
+      aria-label="ShowFilter"
         (click)="showDropForFilteringOp()"
         class="absolute right-0 top-0 mt-4 mr-4 focus:outline-none"
       >
