detalle de home

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -395,10 +395,11 @@
                   </div>
                 </div>
             </div>
+          </div>
             <!-- FIN DE PREPARALO TU MISMO -->
 
             <!-- ADS -->
-            <div class="py-8 bg-white">
+            <div class="py-8">
               <div class="px-8 sm:px-48 md:px-64 py-4 pt-8 text-2xl sm:text-4xl md:text-5xl font-semibold">DISFRUTA POR MENOS</div>
               <!-- ADS CARDS -->
               <div class="w-full flex flex-col items-center mt-10 px-12 sm:px-64 md:px-64">
@@ -534,7 +535,6 @@
             <!-- FIN BARES DE CARACAS -->
             
         </div>
-    </div>
 
     <app-footer></app-footer>    
 </div>
