--- a/documentation/components/ListAdComponent.html
+++ b/documentation/components/ListAdComponent.html
@@ -160,9 +160,6 @@
                                 <a href="#create">create</a>
                             </li>
                             <li>
-                                <a href="#deleteAd">deleteAd</a>
-                            </li>
-                            <li>
                                 <a href="#editAd">editAd</a>
                             </li>
                             <li>
@@ -287,84 +284,20 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="65"
-                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:65</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="99"
+                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:99</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Navega a la vista de crear advertisement</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="deleteAd"></a>
-                    <span class="name">
-                        <b>
-                            deleteAd
-                        </b>
-                        <a href="#deleteAd"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-            <tr>
-                <td class="col-md-4">
-<code>deleteAd(id)</code>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="33"
-                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:33</a></div>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-
-                    <div class="io-description">
-                        <b>Parameters :</b>
-                        <table class="params">
-                            <thead>
-                                <tr>
-                                    <td>Name</td>
-                                    <td>Optional</td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>id</td>
-
-                                    <td>
-                                        No
-                                    </td>
-
-
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div>
-                    </div>
-                    <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
-
-                    </div>
-                    <div class="io-description">
-                        
                     </div>
                 </td>
             </tr>
@@ -392,14 +325,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="61"
-                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:61</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="90"
+                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:90</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Navega a la vista de editar advertisement</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -408,6 +343,7 @@
                                 <tr>
                                     <td>Name</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -419,6 +355,10 @@
                                     </td>
 
 
+                                    <td>
+                                        <p>id del trago que se quiere editar</p>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -458,14 +398,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="25"
-                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:25</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="33"
+                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:33</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Trae los advertisements de la base de datos</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -497,8 +439,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="69"
-                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:69</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="103"
+                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:103</a></div>
                 </td>
             </tr>
 
@@ -563,14 +505,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="75"
-                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:75</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="114"
+                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:114</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Navega a la vista de lista de todas las schemas de la base de datos</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -602,14 +546,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="50"
-                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:50</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="74"
+                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:74</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Habilita e advertisement en la base de datos poniendo la propiedad de available en verdader</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -618,6 +564,7 @@
                                 <tr>
                                     <td>Name</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -629,6 +576,10 @@
                                     </td>
 
 
+                                    <td>
+                                        <p>id del trago que se habilita</p>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -668,14 +619,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="39"
-                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:39</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="58"
+                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:58</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Inhabilida e advertisement en la base de datos poniendo la propiedad de available en falso</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -684,6 +637,7 @@
                                 <tr>
                                     <td>Name</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -695,6 +649,10 @@
                                     </td>
 
 
+                                    <td>
+                                        <p>id del trago que se inhabilita</p>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -734,14 +692,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="20"
-                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:20</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="24"
+                            class="link-to-prism">src/app/components/admin/ad/list-ad/list-ad.component.ts:24</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Inicializa el componente </p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -921,11 +881,19 @@ export class ListAdComponent implements OnInit {
 
   constructor(private service: AdvertisementService, private route: Router) { }
 
+/**
+ * Inicializa el componente 
+ * 
+ */
   ngOnInit() {
     this.getAds();
   }
 
-
+/**
+ * 
+ * Trae los advertisements de la base de datos
+ * 
+ */
   getAds() {
     this.service.getAds().subscribe((res: any) &#x3D;&gt; {
       this.ads &#x3D; [...res.data];
@@ -934,11 +902,22 @@ export class ListAdComponent implements OnInit {
     });
   }
 
+/**
+ * 
+ * @ignore
+ * 
+ */
   deleteAd(id) {
     this.service.deleteAd(id).subscribe((res) &#x3D;&gt; {
       this.getAds();
     });
   }
+
+/**
+ * 
+ * Inhabilida e advertisement en la base de datos poniendo la propiedad de available en falso
+ * @param {string} id id del trago que se inhabilita
+ */
 
   inhabilitateAd(id) {
     this.updating&#x3D;true;
@@ -951,6 +930,11 @@ export class ListAdComponent implements OnInit {
     });
   }
 
+/**
+ * 
+ * Habilita e advertisement en la base de datos poniendo la propiedad de available en verdader
+ * @param {string} id id del trago que se habilita
+ */
   habilitateAd(id) {
     this.updating&#x3D;true;
     this.service.getAd(id).subscribe((res: any) &#x3D;&gt; {
@@ -962,10 +946,20 @@ export class ListAdComponent implements OnInit {
     });
   }
 
+/**
+ * 
+ * Navega a la vista de editar advertisement
+ * @param {string} id id del trago que se quiere editar
+ */
   editAd(id) {
     this.route.navigate([&quot;admin/ad/edit/&quot;, id]);
   }
 
+/**
+ * 
+ * Navega a la vista de crear advertisement
+ * 
+ */
   create(){
     this.route.navigate([&quot;admin/ad/add&quot;]);
   }
@@ -976,6 +970,11 @@ export class ListAdComponent implements OnInit {
     }
   }
 
+/**
+ * 
+ * Navega a la vista de lista de todas las schemas de la base de datos
+ * 
+ */
   goBack(){
     this.route.navigate([&quot;admin&quot;]);
   }
