--- a/documentation/components/ListDrinkComponent.html
+++ b/documentation/components/ListDrinkComponent.html
@@ -160,9 +160,6 @@
                                 <a href="#create">create</a>
                             </li>
                             <li>
-                                <a href="#deleteDrink">deleteDrink</a>
-                            </li>
-                            <li>
                                 <a href="#editDrink">editDrink</a>
                             </li>
                             <li>
@@ -287,84 +284,20 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="66"
-                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:66</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="89"
+                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:89</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Navega a la vista de crear trago</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
 
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="deleteDrink"></a>
-                    <span class="name">
-                        <b>
-                            deleteDrink
-                        </b>
-                        <a href="#deleteDrink"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-            <tr>
-                <td class="col-md-4">
-<code>deleteDrink(id)</code>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="33"
-                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:33</a></div>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-
-                    <div class="io-description">
-                        <b>Parameters :</b>
-                        <table class="params">
-                            <thead>
-                                <tr>
-                                    <td>Name</td>
-                                    <td>Optional</td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>id</td>
-
-                                    <td>
-                                        No
-                                    </td>
-
-
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div>
-                    </div>
-                    <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
-
-                    </div>
-                    <div class="io-description">
-                        
                     </div>
                 </td>
             </tr>
@@ -392,14 +325,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="61"
-                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:61</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="81"
+                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:81</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Navega a la vista de editar un trago</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -408,6 +343,7 @@
                                 <tr>
                                     <td>Name</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -419,6 +355,10 @@
                                     </td>
 
 
+                                    <td>
+                                        <p>id del trago que se quiere editar</p>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -458,14 +398,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="24"
-                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:24</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="30"
+                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:30</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Trae los drinks de la base de datos </p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -497,8 +439,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="70"
-                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:70</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="93"
+                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:93</a></div>
                 </td>
             </tr>
 
@@ -563,14 +505,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="76"
-                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:76</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="102"
+                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:102</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Navega a la de la lista de schemas</p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -602,14 +546,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="50"
-                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:50</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="67"
+                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:67</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Habilita el drink en la base de datos poniendo la propiedad de available en verdadero</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -618,6 +564,7 @@
                                 <tr>
                                     <td>Name</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -629,6 +576,10 @@
                                     </td>
 
 
+                                    <td>
+                                        <p>id del trago que se inhabilita</p>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -668,14 +619,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="39"
-                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:39</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="52"
+                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:52</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Inhabilita el drink en la base de datos poniendo la propiedad de available en falso</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -684,6 +637,7 @@
                                 <tr>
                                     <td>Name</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -695,6 +649,10 @@
                                     </td>
 
 
+                                    <td>
+                                        <p>id del trago que se habilita</p>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -734,14 +692,16 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="20"
-                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:20</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="23"
+                            class="link-to-prism">src/app/components/admin/drink/list-drink/list-drink.component.ts:23</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Inicializa el componente </p>
+</div>
 
                     <div class="io-description">
                         <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -926,11 +886,17 @@ export class ListDrinkComponent implements OnInit {
   updating:Boolean&#x3D;false;
 
   constructor(private service: DrinkService, private route: Router) {}
-
+/**
+ * Inicializa el componente 
+ * 
+ */
   ngOnInit() {
     this.getDrinks();
   }
-
+/**
+ * Trae los drinks de la base de datos 
+ * 
+ */
   getDrinks() {
     this.service.getDrinks().subscribe((res: any) &#x3D;&gt; {
       this.drinks &#x3D; [...res.data];
@@ -939,13 +905,20 @@ export class ListDrinkComponent implements OnInit {
       console.log(this.drinks)
     });
   }
-
+/**
+ * @ignore 
+ * 
+ */
   deleteDrink(id) {
     this.service.deleteDrink(id).subscribe((res) &#x3D;&gt; {
       this.getDrinks();
     });
   }
-
+/**
+ * 
+ * Inhabilita el drink en la base de datos poniendo la propiedad de available en falso
+ * @param {string} id id del trago que se habilita
+ */
   inhabilitateDrink(id) {
     this.updating&#x3D;true;
     this.service.getDrink(id).subscribe((res: any) &#x3D;&gt; {
@@ -956,7 +929,11 @@ export class ListDrinkComponent implements OnInit {
       });
     });
   }
-
+/**
+ * 
+ * Habilita el drink en la base de datos poniendo la propiedad de available en verdadero
+ * @param {string} id id del trago que se inhabilita
+ */
   habilitateDrink(id) {
     this.updating&#x3D;true;
     this.service.getDrink(id).subscribe((res: any) &#x3D;&gt; {
@@ -967,12 +944,18 @@ export class ListDrinkComponent implements OnInit {
       });
     });
   }
-
+/**
+ * Navega a la vista de editar un trago
+ * @param {string} id id del trago que se quiere editar
+ */
   editDrink(id) {
     
     this.route.navigate([&quot;admin/drink/edit/&quot;, id]);
   }
-
+/**
+ * Navega a la vista de crear trago
+ * 
+ */
   create(){
     this.route.navigate([&quot;admin/drink/add&quot;]);
   }
@@ -982,7 +965,10 @@ export class ListDrinkComponent implements OnInit {
       this.sidebar &#x3D; $event;
     }
   }
-
+/**
+ * Navega a la de la lista de schemas
+ * 
+ */
   goBack(){
     this.route.navigate([&quot;admin&quot;]);
   }
