--- a/src/app/components/drinkly-team/drinkly-team.component.html
+++ b/src/app/components/drinkly-team/drinkly-team.component.html
@@ -2,6 +2,7 @@
 <div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move" style="min-height: 25vh; font-family: 'Open Sans', sans-serif;">
     
     <div *ngIf="!loadingDrinks && !loadingUsers && !loadingBars">
+    
         <!-- BARRA DEL MENÚ-->
         <div class="flex sticky top-0 bg-black w-full z-10">
             <div class="ml-20 my-1">
@@ -28,9 +29,10 @@
                 </div>
             </div>
         </div>
-
         
 
+        
+        <main>
         <div class="flex content-center flex-wrap justify-center items-center" style="min-height: 20vh; font-family: 'Open Sans', sans-serif;">
             <div class="text-gray-900 flex content-center flex-wrap justify-center border-gray-700 text-5xl sm:text-6xl w-1/3  border-b-2">
                 <p>DRINKLY</p>
@@ -48,6 +50,7 @@
                 <p>En nuestra plataforma podrás encontrar una enorme variedad de tragos que podrás preparar desde la comodidad de tu hogar. Te ofrecemos el paso a paso y los ingredientes que vas a necesitar para que puedas degustarla.</p>
             </div>
         </div>
+        </main>
 
         <div class="w-full flex justify-center">
             <div class="w-3/4 border-gray-300 border-b-2" style="min-height:32px"></div>
